Ensure JavaFX native access across all launch paths - enable native access for regular, packaged, and self-update launches - relaunch GUI automatically when required JVM permissions are missing - preserve protocol readiness until post-connect initialization completes - update Gradle to 9.6.1 and GraalVM Build Tools to 1.1.4 - reorganize and document the build configuration - isolate user preferences and stabilize asynchronous tests